--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Dongju jang <dongjujang56@gmail.com>",
   "description": "torrent_webhook",
   "dependencies": {
-    "express": "4.12.0"
+    "express": "4.12.0",
     "mongodb": "1.4.31"
   },
   "engines": {
