--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "description": "torrent_webhook",
   "dependencies": {
     "express": "4.12.0",
+    "multer": "0.1.8",
     "mongodb": "1.4.31"
   },
   "engines": {
