--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "torrent-incoming-webhook",
   "version": "0.0.1",
@@ -6,9 +5,10 @@
   "author": "Dongju jang <dongjujang56@gmail.com>",
   "description": "torrent_webhook",
   "dependencies": {
+    "body-parser": "^1.12.0",
     "express": "4.12.0",
-    "multer": "0.1.8",
-    "mongodb": "1.4.31"
+    "mongodb": "1.4.31",
+    "multer": "0.1.8"
   },
   "engines": {
     "node": "0.10.x"
